crates/vespera_macro/src/schema_macro/inline_types/snapshots/vespera_macro__schema_macro__inline_types__tests__complex_field_types.snap
---
source: crates/vespera_macro/src/schema_macro/inline_types/tests.rs
expression: pretty(&generate_inline_type_definition(&inline_type))
---
#[derive(Clone, serde::Serialize, serde::Deserialize, vespera::Schema)]
#[serde(rename_all = "camelCase")]
pub struct ComplexType {
    pub id: i32,
    pub tags: Vec<String>,
    pub metadata: Option<std::collections::HashMap<String, serde_json::Value>>,
}
