crates/vespera_macro/src/schema_macro/inline_types/snapshots/vespera_macro__schema_macro__inline_types__tests__doc_attribute.snap
---
source: crates/vespera_macro/src/schema_macro/inline_types/tests.rs
expression: pretty(&generate_inline_type_definition(&inline_type))
---
#[derive(Clone, serde::Serialize, serde::Deserialize, vespera::Schema)]
#[serde(rename_all = "camelCase")]
pub struct DocType {
    ///This is a documented field
    pub documented_field: String,
}
