crates/vespera_macro/src/schema_macro/inline_types/snapshots/vespera_macro__schema_macro__inline_types__tests__field_attr_rename_snake_case.snap
---
source: crates/vespera_macro/src/schema_macro/inline_types/tests.rs
expression: pretty(&generate_inline_type_definition(&inline_type))
---
#[derive(Clone, serde::Serialize, serde::Deserialize, vespera::Schema)]
#[serde(rename_all = "snake_case")]
pub struct TestType {
    #[serde(rename = "renamed")]
    pub field: String,
}
